<resources>
    <string name="app_name">GeoCalculator</string>
    <string name="title_activity_my_settings">MySettingsActivity</string>
    <string name="enter_latitude_for_p1">Enter latitude for p1</string>
    <string name="enter_latitude_for_p2">Enter latitude for p2</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="bearing">Bearing:</string>
    <string name="enter_longitude_for_p1">Enter longitude for p1</string>
    <string name="enter_longitude_for_p2">Enter longitude for p2</string>
    <string-array name="distance">
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>
    <string-array name="bearing">
        <item>Degrees</item>
        <item>Mils</item>
    </string-array>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_history_view">HistoryViewActivity</string>
</resources>
